# aztec-validator-register

./: .gitignore  Cargo.toml  README.md  config.ts  forwarder.json  index.ts  package.json
src/: config.rs  create_transaction.rs  estimate_gas.rs  forwarder.rs  lib.rs  main.rs  provider.rs
src/contracts/: Forwarder.json
