[package]
name = "aztec-validator-register"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.15.11", features = ["full"] }
futures-util = "0.3"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"